# aztecs

./: aztecs.cabal
bench/: Bench.hs
examples/: ECS.hs
src/Aztecs/: ECS.hs  Hierarchy.hs
src/Aztecs/ECS/: Component.hs  Observer.hs  Query.hs  System.hs  View.hs
src/Aztecs/ECS/Query/: Dynamic.hs
src/Aztecs/ECS/System/: Dynamic.hs
src/Aztecs/ECS/World/: Archetype.hs  Archetypes.hs  Storage.hs
src/Aztecs/ECS/World/Storage/: Dynamic.hs
src/Data/: Aztecs.hs
src/Data/Aztecs/: Access.hs  Archetype.hs  Archetypes.hs  Components.hs  Edit.hs  Entity.hs  Query.hs  Row.hs  Table.hs  World.hs
test/: Main.hs
