cabal-version: 3.0
name:          aztecs
version:       0.1.0.1
license:       BSD-3-Clause
license-file:  LICENSE
maintainer:    matt@hunzinger.me
author:        Matt Hunzinger
synopsis:      A type-safe and friendly ECS for Haskell 
description:   A type-safe and friendly ECS for Haskell 
category:      Game Engine

library
    exposed-modules:
        Data.Aztecs

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4 && <5,
        async >=2,
        containers >=0.7,
        mtl >=2,
        vector >=0.13

executable ecs
    main-is:          ECS.hs
    hs-source-dirs:   examples
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4 && <5,
        aztecs,
        pretty-simple

test-suite aztecs-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4 && <5,
        aztecs,
        hspec >=2

benchmark aztecs-bench
    type:             exitcode-stdio-1.0
    main-is:          Iter.hs
    hs-source-dirs:   bench
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4 && <5,
        aztecs,
        criterion >=1
